@@ -1,8 +1,8 @@
 Package: MultiRankSeq
 Type: Package
 Title: MultiRankSeq
-Version: 1.2.7
-Date: 2016-04-22
+Version: 1.3.0
+Date: 2020-04-17
 Author: Shilin Zhao, Yan Guo, Shyr Yu
 Maintainer: Shilin Zhao <shilin.zhao@vanderbilt.edu>
 Description: MultiRankSeq package provides a rank sum approach using multiple
@@ -13,7 +13,7 @@ LazyLoad: yes
 Depends:
     DESeq2 (>= 1.4.5),
     edgeR,
-    baySeq (>= 1.18.0),
+    baySeq (>= 2.18.0),
     VennDiagram,
     knitr
 Collate:
