@@ -1,3 +1,6 @@
+2020-04-17
+MultiRankSeq 1.3.0: Update due to the changes in baySeq package.
+
 2016-04-22
 MultiRankSeq 1.2.7: Update due to the changes in baySeq package.
 
